Fix layout bug for Safari and Chrome
There's a bug in there flexbox implementation that a fieldset
element can't be a flex container. Adding a wrapper div is the
workaround.

See https://github.com/philipwalton/flexbugs#9-some-html-elements-cant-be-flex-containers

--- a/app/assets/stylesheets/partials/_grid.scss
+++ b/app/assets/stylesheets/partials/_grid.scss
@@ -516,7 +516,7 @@
 
 .councillor-contribution-form {
   dl,
-  fieldset {
+  .suggested-councillor-input-wrapper {
     @include at-breakpoint(30em) {
       display: flex;
       justify-content: space-between;
